[project]
name = "sdvn_comfy_node"
description = "Update Group Switch Node, Image Chooser Node and fix bug"
version = "2.04.09"   
license = {file = "LICENSE"}
dependencies = ["#If MacOs - Please install aria2 manually via brew", "aria2;sys_platform != 'darwin'", "openai", "gallery-dl", "google-generativeai", "googletrans-py"]

[project.urls]
Repository = "https://github.com/StableDiffusionVN/SDVN_Comfy_node"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "sdvn-comfy-node"
DisplayName = "SDVN_Comfy_node"
Icon = "https://github.com/StableDiffusionVN/SDVN_Comfy_node/blob/main/preview/sdvn-logo.png?raw=true"